# jpeg-reencode

./: .gitignore  main.py  meson.build  reference.sh
include/: huffman.h  jpeg.h
py/: jpeg_reencodemodule.c
src/: decode.c  encode.c  huffman.c  jpeg.c  main.c  reencode.c
